<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroud_color"
    tools:context=".view.HomeActivity">


    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/backgroud_color"
            android:minHeight="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movieflix"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/neon_green" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Welcome , Darman"
        android:textSize="20sp"

        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trending_movie"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/neon_green" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_frame_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
            <include layout="@layout/shimmer_loading_trending"/>
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_trending_movie"
        android:layout_width="match_parent"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_movie"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/neon_green" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_frame_layout_upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
           <include layout="@layout/shimmer_loading_upcoming"/>
            <include layout="@layout/shimmer_loading_upcoming"/>
            <include layout="@layout/shimmer_loading_upcoming"/>
            <include layout="@layout/shimmer_loading_upcoming"/>
            <include layout="@layout/shimmer_loading_upcoming"/>
            <include layout="@layout/shimmer_loading_upcoming"/>
            <include layout="@layout/shimmer_loading_upcoming"/>
            <include layout="@layout/shimmer_loading_upcoming"/>
            <include layout="@layout/shimmer_loading_upcoming"/>
            <include layout="@layout/shimmer_loading_upcoming"/>
            <include layout="@layout/shimmer_loading_upcoming"/>
            <include layout="@layout/shimmer_loading_upcoming"/>
            <include layout="@layout/shimmer_loading_upcoming"/>

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_upcoming_movie"
        android:layout_width="match_parent"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"/>

</LinearLayout>